# anki_kokoro_extension

./: README.md  __init__.py  add_button.py  config.json  config.md  manager.py  meta.json  parser.py  pyproject.toml  sandox.py  settings.py  tts_button.py  tts_output_processor.py  tts_request.py  utils.py
docs/: README.md  dev.md
kokoro/: manager.py  query_kokoro.py  start_kokoro.py
tests/: test_http_stiper.py  test_utils.py
